--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,15 +1,15 @@
 {
   "short_name": "MifosX",
   "name": "MifosX Web App",
-  "start_url": "/",
-  "scope": "/",
+  "start_url": "./",
+  "scope": "./",
   "theme_color": "#fff",
   "background_color": "#fff",
   "display": "standalone",
-  "description": "MifosX Web App is the default web application built on top of the Fineract platform for the Mifos user community leveraging the popular Angular framework.",
+  "description": "MIDAS Web App is the default web application built on top of the Fineract platform and Angular framework.",
   "icons": [
     {
-      "src": "assets/images/MifosX_logo.png",
+      "src": "assets/images/Midas_logo.png",
       "sizes": "182x184",
       "type": "image/png"
     }
