--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "@fortawesome/angular-fontawesome": "0.6.1",
     "@fortawesome/fontawesome-svg-core": "1.2.18",
     "@fortawesome/free-solid-svg-icons": "5.8.2",
-    "@ngx-translate/core": "11.0.1",
+    "@ngx-translate/core": "^12.0.0",
+    "@ngx-translate/http-loader": "^5.0.0",
     "chart.js": "3.0.0-alpha",
     "core-js": "2.5.0",
     "lodash": "4.17.19",
