--- a/angular.json
+++ b/angular.json
@@ -90,7 +90,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "midas-web-app:build"
+            "browserTarget": "midas-web-app:build",
+            "aot": false
           },
           "configurations": {
             "production": {
