--- a/package.json
+++ b/package.json
@@ -58,26 +58,26 @@
     "@angular/cli": "9.1.12",
     "@angular/compiler-cli": "9.1.12",
     "@angular/language-service": "9.1.12",
-    "@biesbjerg/ngx-translate-extract": "2.3.4",
+    "@biesbjerg/ngx-translate-extract": "^7.0.3",
     "@ngx-rocket/scripts": "3.0.3",
     "@types/jasmine": "3.3.13",
     "@types/jasminewd2": "2.0.6",
     "@types/lodash": "4.14.132",
     "@types/node": "12.11.1",
     "codelyzer": "5.1.2",
-    "hads": "1.7.3",
+    "hads": "^2.1.0",
     "htmlhint": "0.11.0",
-    "https-proxy-agent": "2.2.1",
+    "https-proxy-agent": "^5.0.0",
     "jasmine-core": "3.4.0",
     "jasmine-spec-reporter": "4.2.1",
-    "karma": "4.1.0",
+    "karma": "^5.2.3",
     "karma-chrome-launcher": "2.2.0",
     "karma-cli": "2.0.0",
     "karma-coverage-istanbul-reporter": "2.0.5",
     "karma-jasmine": "2.0.1",
     "karma-junit-reporter": "1.2.0",
-    "protractor": "5.4.2",
-    "stylelint": "10.0.1",
+    "protractor": "^7.0.0",
+    "stylelint": "^13.7.2",
     "stylelint-config-recommended-scss": "3.3.0",
     "stylelint-config-standard": "18.3.0",
     "stylelint-scss": "3.6.1",
