--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "chart.js": "3.0.0-alpha",
     "core-js": "2.5.0",
     "lodash": "4.17.19",
+    "ngx-currency": "^2.5.1",
     "ngx-mask": "^10.0.4",
     "ngx-mat-select-search": "^3.1.2",
     "rxjs": "6.6.2",
