--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,4 +7,4 @@ jobs:
     runs-on: self-hosted
     steps:
     # checkout branch
-    - uses: actions/checkout@development
+    - uses: actions/checkout@v2
