--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,5 +10,5 @@ jobs:
     - uses: actions/checkout@v2
     - name: yarn install, build
       run: |
-        yarn install
+        npm install
         ng build
