--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,9 @@
 on: [push]
 
-name: self-hosted-example
+name: self-hosted-midas
 
 jobs:
-  simpleExample:
+  deployStaging:
     runs-on: self-hosted
     steps:
     # checkout branch
@@ -11,4 +11,4 @@ jobs:
     - name: yarn install, build
       run: |
         yarn install
-        ng build --prod --output-hashing=all --deleteOutputPath=true --outputPath="/usr/share/nginx/html/web-app/" 
+        ng build --prod --output-hashing=all --deleteOutputPath=true --base-href="/"  --serviceWorker=true --outputPath="/usr/share/nginx/html/staging/" 
