--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,8 @@ jobs:
     steps:
     # checkout branch
     - uses: actions/checkout@v2
-    - name: yarn install, build
+   # - name: yarn install, build
       run: |
+        git pull
         yarn install
         ng build --prod --output-hashing=all --deleteOutputPath=true --base-href="/"  --serviceWorker=true --outputPath="/usr/share/nginx/html/staging/" 
