--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,8 +9,8 @@ jobs:
     runs-on: self-hosted
     steps:
     # checkout branch
-    - uses: actions/checkout@v2
-   # - name: yarn install, build
+    #- uses: actions/checkout@v2
+    - name: yarn install, build
       run: |
         git pull
         yarn install
