--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,7 @@ jobs:
       run: |
         yarn install
     - name: build production
+      run: |
         ng build --prod --output-hashing=all --deleteOutputPath=true --base-href="/"  --serviceWorker=true --outputPath="/usr/share/nginx/html/staging/" 
 
   testDev:
@@ -27,4 +28,4 @@ jobs:
     steps:
     - name: test if event
       run: |
-        @echo "Hello"
+        echo "Hello"
