--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,8 +12,11 @@ jobs:
     #- uses: actions/checkout@v2
     - name: git pull
       run: |
+        cd ./midas/midas_source
         git pull origin staging
     - name: yarn install 
       run: |
         yarn install
+    - name: build app 
+      run: |
         ng build --prod --output-hashing=all --deleteOutputPath=true --base-href="/"  --serviceWorker=true --outputPath="/usr/share/nginx/html/staging/" 
