--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ jobs:
     #- uses: actions/checkout@v2
     - name: git pull
       run: |
-        cd ./midas/midas_source
+        cd /root/actions-runner/midas/midas_source/
         git pull origin staging
     - name: yarn install 
       run: |
