--- a/package.json
+++ b/package.json
@@ -27,19 +27,19 @@
     "postinstall": "ngcc"
   },
   "dependencies": {
-    "@angular/animations": "9.1.12",
+    "@angular/animations": "10.2.4",
     "@angular/cdk": "9.2.4",
-    "@angular/common": "9.1.12",
-    "@angular/compiler": "9.1.12",
-    "@angular/core": "9.1.12",
+    "@angular/common": "10.2.4",
+    "@angular/compiler": "10.2.4",
+    "@angular/core": "10.2.4",
     "@angular/flex-layout": "9.0.0-beta.31",
-    "@angular/forms": "9.1.12",
-    "@angular/localize": "9.1.12",
+    "@angular/forms": "10.2.4",
+    "@angular/localize": "10.2.4",
     "@angular/material": "9.2.4",
-    "@angular/platform-browser": "9.1.12",
-    "@angular/platform-browser-dynamic": "9.1.12",
-    "@angular/router": "9.1.12",
-    "@angular/service-worker": "9.1.12",
+    "@angular/platform-browser": "10.2.4",
+    "@angular/platform-browser-dynamic": "10.2.4",
+    "@angular/router": "10.2.4",
+    "@angular/service-worker": "10.2.4",
     "@busacca/ng-pick-datetime": "^10.0.0",
     "@ckeditor/ckeditor5-angular": "1.2.3",
     "@ckeditor/ckeditor5-build-classic": "21.0.0",
@@ -59,14 +59,14 @@
     "ngx-mask": "9.1.4",
     "ngx-mat-select-search": "^3.1.2",
     "rxjs": "6.6.2",
-    "tslib": "^2.0.3",
+    "tslib": "^2.0.0",
     "zone.js": "0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.901.12",
-    "@angular/cli": "9.1.12",
-    "@angular/compiler-cli": "9.1.12",
-    "@angular/language-service": "9.1.12",
+    "@angular-devkit/build-angular": "0.1002.1",
+    "@angular/cli": "10.2.1",
+    "@angular/compiler-cli": "10.2.4",
+    "@angular/language-service": "10.2.4",
     "@biesbjerg/ngx-translate-extract": "^7.0.3",
     "@ngx-rocket/scripts": "3.0.3",
     "@types/jasmine": "3.3.13",
@@ -77,22 +77,22 @@
     "hads": "^2.1.0",
     "htmlhint": "0.11.0",
     "https-proxy-agent": "^5.0.0",
-    "jasmine-core": "3.4.0",
-    "jasmine-spec-reporter": "4.2.1",
-    "karma": "^5.2.3",
-    "karma-chrome-launcher": "2.2.0",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.0.0",
+    "karma-chrome-launcher": "~3.1.0",
     "karma-cli": "2.0.0",
-    "karma-coverage-istanbul-reporter": "2.0.5",
-    "karma-jasmine": "2.0.1",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~4.0.0",
     "karma-junit-reporter": "1.2.0",
-    "protractor": "^7.0.0",
+    "protractor": "~7.0.0",
     "stylelint": "^13.7.2",
     "stylelint-config-recommended-scss": "3.3.0",
     "stylelint-config-standard": "18.3.0",
     "stylelint-scss": "3.6.1",
     "ts-node": "8.2.0",
-    "tslint": "5.16.0",
-    "typescript": "3.8.3"
+    "tslint": "~6.1.0",
+    "typescript": "4.0.5"
   },
   "repository": {
     "type": "git",
