--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
     "@angular/common": "10.2.4",
     "@angular/compiler": "10.2.4",
     "@angular/core": "10.2.4",
-    "@angular/flex-layout": "9.0.0-beta.31",
+    "@angular/flex-layout": "^10.0.0-beta.32",
     "@angular/forms": "10.2.4",
     "@angular/localize": "10.2.4",
-    "@angular/material": "9.2.4",
+    "@angular/material": "10.2.7",
     "@angular/platform-browser": "10.2.4",
     "@angular/platform-browser-dynamic": "10.2.4",
     "@angular/router": "10.2.4",
@@ -43,11 +43,11 @@
     "@busacca/ng-pick-datetime": "^10.0.0",
     "@ckeditor/ckeditor5-angular": "1.2.3",
     "@ckeditor/ckeditor5-build-classic": "21.0.0",
-    "@fortawesome/angular-fontawesome": "0.6.1",
+    "@fortawesome/angular-fontawesome": "^0.7.0",
     "@fortawesome/fontawesome-svg-core": "1.2.27",
     "@fortawesome/free-solid-svg-icons": "5.8.2",
-    "@ngx-translate/core": "^12.0.0",
-    "@ngx-translate/http-loader": "^5.0.0",
+    "@ngx-translate/core": "^13.0.0",
+    "@ngx-translate/http-loader": "^6.0.0",
     "chart.js": "3.0.0-alpha",
     "core-js": "2.5.0",
     "lodash": "4.17.19",
@@ -55,9 +55,10 @@
     "ng2-completer": "^9.0.1",
     "ng2-smart-table": "^1.7.1",
     "ngx-currency": "^2.5.1",
-    "ngx-easy-table": "^13.0.3",
-    "ngx-mask": "9.1.4",
+    "ngx-easy-table": "^14.0.0",
+    "ngx-mask": "^11.1.4",
     "ngx-mat-select-search": "^3.1.2",
+    "ngx-pagination": "^5.0.0",
     "rxjs": "6.6.2",
     "tslib": "^2.0.0",
     "zone.js": "0.10.3"
@@ -73,7 +74,9 @@
     "@types/jasminewd2": "2.0.6",
     "@types/lodash": "4.14.132",
     "@types/node": "12.11.1",
-    "codelyzer": "5.1.2",
+    "babel-eslint": "^10.1.0",
+    "codelyzer": "^6.0.1",
+    "eslint": "4.12.1",
     "hads": "^2.1.0",
     "htmlhint": "0.11.0",
     "https-proxy-agent": "^5.0.0",
@@ -87,9 +90,10 @@
     "karma-junit-reporter": "1.2.0",
     "protractor": "~7.0.0",
     "stylelint": "^13.7.2",
-    "stylelint-config-recommended-scss": "3.3.0",
-    "stylelint-config-standard": "18.3.0",
-    "stylelint-scss": "3.6.1",
+    "stylelint-config-recommended": "^3.0.0",
+    "stylelint-config-recommended-scss": "^4.2.0",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-scss": "^3.18.0",
     "ts-node": "8.2.0",
     "tslint": "~6.1.0",
     "typescript": "4.0.5"
