--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "@types/lodash": "4.14.132",
     "@types/node": "12.11.1",
     "codelyzer": "5.1.2",
+    "font-awesome": "^4.7.0",
     "hads": "^2.1.0",
     "htmlhint": "0.11.0",
     "https-proxy-agent": "^5.0.0",
