--- a/angular.json
+++ b/angular.json
@@ -16,8 +16,13 @@
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
+          
           "options": {
-            "aot": false,
+            "aot": true,
+            "allowedCommonJsDependencies": [
+              "lodash",
+              "@ckeditor/ckeditor5-build-classic"
+           ],
             "outputPath": "dist/web-app",
             "index": "src/index.html",
             "main": "src/main.ts",
