fix some dependencies, font link

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "postinstall": "ngcc"
   },
   "dependencies": {
+    "@akveo/ng2-completer": "9.0.1",
     "@angular/animations": "9.1.12",
     "@angular/cdk": "9.2.4",
     "@angular/common": "9.1.12",
@@ -40,7 +41,7 @@
     "@angular/platform-browser-dynamic": "9.1.12",
     "@angular/router": "9.1.12",
     "@angular/service-worker": "9.1.12",
-    "@busacca/ng-pick-datetime": "^10.0.0",
+    "@busacca/ng-pick-datetime": "~9.0.0",
     "@ckeditor/ckeditor5-angular": "1.2.3",
     "@ckeditor/ckeditor5-build-classic": "21.0.0",
     "@fortawesome/angular-fontawesome": "0.6.1",
@@ -48,18 +49,21 @@
     "@fortawesome/free-solid-svg-icons": "5.8.2",
     "@ngx-translate/core": "^12.0.0",
     "@ngx-translate/http-loader": "^5.0.0",
+    "@stomp/ng2-stompjs": "^8.0.0",
     "chart.js": "3.0.0-alpha",
     "core-js": "2.5.0",
+    "eslint": "^7.19.0",
     "lodash": "4.17.19",
     "moment": "^2.29.1",
     "ng2-completer": "^9.0.1",
-    "ng2-smart-table": "^1.7.1",
+    "ng2-smart-table": "1.6.0",
     "ngx-currency": "^2.5.1",
     "ngx-easy-table": "^13.0.3",
     "ngx-mask": "9.1.4",
     "ngx-mat-select-search": "^3.1.2",
+    "ngx-pagination": "^5.0.0",
     "rxjs": "6.6.2",
-    "tslib": "^2.0.3",
+    "tslib": "1.10.0",
     "zone.js": "0.10.3"
   },
   "devDependencies": {
@@ -87,7 +91,7 @@
     "karma-jasmine": "2.0.1",
     "karma-junit-reporter": "1.2.0",
     "protractor": "^7.0.0",
-    "stylelint": "^13.7.2",
+    "stylelint": "10.0.0",
     "stylelint-config-recommended-scss": "3.3.0",
     "stylelint-config-standard": "18.3.0",
     "stylelint-scss": "3.6.1",
