--- a/package.json
+++ b/package.json
@@ -50,10 +50,12 @@
     "@ngx-translate/core": "^12.0.0",
     "@ngx-translate/http-loader": "^5.0.0",
     "@stomp/ng2-stompjs": "^8.0.0",
+    "angular-calendar": "^0.28.22",
     "chart.js": "3.0.0-alpha",
     "core-js": "2.5.0",
+    "date-fns": "^2.18.0",
     "eslint": "^7.19.0",
-    "lodash": "4.17.19",
+    "lodash": "4.17.21",
     "moment": "^2.29.1",
     "ng2-completer": "^9.0.1",
     "ng2-smart-table": "1.6.0",
@@ -63,7 +65,7 @@
     "ngx-mat-select-search": "^3.1.2",
     "ngx-pagination": "^5.0.0",
     "rxjs": "6.6.2",
-    "tslib": "1.10.0",
+    "tslib": "1.12.0",
     "zone.js": "0.10.3"
   },
   "devDependencies": {
