add Google firebase messaging service
Lưu ý nếu gặp lỗi khi chạy gây ra bởi thu viện firebase như sau:
  '__spreadArray' was not found in 'tslib'
Thì cứ bay vào các file báo lỗi và thay chuỗi '__spreadArray' thành '__spreadArrays'

Đây là lỗi typo của thư viện.

--- a/angular.json
+++ b/angular.json
@@ -28,6 +28,7 @@
               "src/favicon.ico",
               "src/robots.txt",
               "src/manifest.json",
+              "src/firebase-messaging-sw.js",
               "src/assets",
               "src/assets/i8n"
             ],
@@ -156,6 +157,7 @@
               "src/favicon.ico",
               "src/robots.txt",
               "src/manifest.json",
+              "src/firebase-messaging-sw.js",              
               "src/assets"
             ]
           }
