--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,9 @@
   "compileOnSave": false,
   "compilerOptions": {
     "baseUrl": "src",
+    "paths": {
+      "tslib" : ["path/to/node_modules/tslib/tslib.d.ts"]
+    },
     "downlevelIteration": true,
     "importHelpers": true,
     "module": "esnext",
