--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@angular/common": "9.1.12",
     "@angular/compiler": "9.1.12",
     "@angular/core": "9.1.12",
+    "@angular/fire": "6.0.4",
     "@angular/flex-layout": "9.0.0-beta.31",
     "@angular/forms": "9.1.12",
     "@angular/localize": "9.1.12",
@@ -55,6 +56,7 @@
     "core-js": "2.5.0",
     "date-fns": "^2.18.0",
     "eslint": "^7.19.0",
+    "firebase": "^8.3.0",
     "lodash": "4.17.21",
     "moment": "^2.29.1",
     "ng2-completer": "^9.0.1",
@@ -65,7 +67,7 @@
     "ngx-mat-select-search": "^3.1.2",
     "ngx-pagination": "^5.0.0",
     "rxjs": "6.6.2",
-    "tslib": "1.12.0",
+    "tslib": "1.14.1",
     "zone.js": "0.10.3"
   },
   "devDependencies": {
