fix on undefile subscribe
fix on undefile subscribe

--- a/angular.json
+++ b/angular.json
@@ -84,7 +84,7 @@
               "extractLicenses": true,
               "vendorChunk": false,
               "buildOptimizer": true,
-              "serviceWorker": false,
+              "serviceWorker": true,
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
