change client view và batch transaction
Show create Saving button
change save and close button on batch txn screen
Show agency name on batch txn screen

--- a/angular.json
+++ b/angular.json
@@ -51,7 +51,7 @@
               },
               {
                 "inject": false,
-                "input": "src/theme/purple-green.scss",
+                "input": "src/theme/custom/purple-green.scss",
                 "bundleName": "theme/purple-green"
               },
               {
