apply default midas branding identification (red and wihite) and fix UI for signature button

--- a/angular.json
+++ b/angular.json
@@ -36,6 +36,11 @@
               "src/main.scss",
               {
                 "inject": false,
+                "input": "src/theme/custom/default_theme.scss",
+                "bundleName": "theme/default-theme"
+              },
+              {
+                "inject": false,
                 "input": "src/theme/deeppurple-amber.scss",
                 "bundleName": "theme/deeppurple-amber"
               },
