--- a/package.json
+++ b/package.json
@@ -28,20 +28,20 @@
   },
   "dependencies": {
     "@akveo/ng2-completer": "9.0.1",
-    "@angular/animations": "9.1.12",
+    "@angular/animations": "9.1.13",
     "@angular/cdk": "9.2.4",
-    "@angular/common": "9.1.12",
-    "@angular/compiler": "9.1.12",
-    "@angular/core": "9.1.12",
+    "@angular/common": "9.1.13",
+    "@angular/compiler": "9.1.13",
+    "@angular/core": "9.1.13",
     "@angular/fire": "6.0.4",
     "@angular/flex-layout": "9.0.0-beta.31",
-    "@angular/forms": "9.1.12",
-    "@angular/localize": "9.1.12",
+    "@angular/forms": "9.1.13",
+    "@angular/localize": "9.1.13",
     "@angular/material": "9.2.4",
-    "@angular/platform-browser": "9.1.12",
-    "@angular/platform-browser-dynamic": "9.1.12",
-    "@angular/router": "9.1.12",
-    "@angular/service-worker": "9.1.12",
+    "@angular/platform-browser": "9.1.13",
+    "@angular/platform-browser-dynamic": "9.1.13",
+    "@angular/router": "9.1.13",
+    "@angular/service-worker": "9.1.13",
     "@busacca/ng-pick-datetime": "~9.0.0",
     "@ckeditor/ckeditor5-angular": "1.2.3",
     "@ckeditor/ckeditor5-build-classic": "21.0.0",
@@ -62,6 +62,7 @@
     "ng2-completer": "^9.0.1",
     "ng2-smart-table": "1.6.0",
     "ngx-currency": "^2.5.1",
+    "ngx-device-detector": "^2.0.6",
     "ngx-easy-table": "^13.0.3",
     "ngx-mask": "9.1.4",
     "ngx-mat-select-search": "^3.1.2",
@@ -72,9 +73,9 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.901.12",
-    "@angular/cli": "9.1.12",
-    "@angular/compiler-cli": "9.1.12",
-    "@angular/language-service": "9.1.12",
+    "@angular/cli": "9.1.13",
+    "@angular/compiler-cli": "9.1.13",
+    "@angular/language-service": "9.1.13",
     "@biesbjerg/ngx-translate-extract": "^7.0.3",
     "@ngx-rocket/scripts": "3.0.3",
     "@types/jasmine": "3.3.13",
