up date dependencies

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@angular/compiler": "10.2.4",
     "@angular/core": "10.2.4",
     "@angular/fire": "6.0.4",
-    "@angular/flex-layout": "9.0.0-beta.31",
+    "@angular/flex-layout": "10.0.0-beta.32",
     "@angular/forms": "10.2.4",
     "@angular/localize": "10.2.4",
     "@angular/material": "10.2.7",
@@ -42,14 +42,14 @@
     "@angular/platform-browser-dynamic": "10.2.4",
     "@angular/router": "10.2.4",
     "@angular/service-worker": "10.2.4",
-    "@busacca/ng-pick-datetime": "~9.0.0",
+    "@busacca/ng-pick-datetime": "10.0.0",
     "@ckeditor/ckeditor5-angular": "1.2.3",
     "@ckeditor/ckeditor5-build-classic": "21.0.0",
-    "@fortawesome/angular-fontawesome": "0.6.1",
+    "@fortawesome/angular-fontawesome": "0.7.0",
     "@fortawesome/fontawesome-svg-core": "1.2.27",
     "@fortawesome/free-solid-svg-icons": "5.8.2",
-    "@ngx-translate/core": "^12.0.0",
-    "@ngx-translate/http-loader": "^5.0.0",
+    "@ngx-translate/core": "13.0.0",
+    "@ngx-translate/http-loader": "6.0.0",
     "@stomp/ng2-stompjs": "^8.0.0",
     "angular-calendar": "^0.28.22",
     "chart.js": "3.0.0-alpha",
@@ -60,12 +60,12 @@
     "lodash": "4.17.21",
     "moment": "^2.29.1",
     "ng2-completer": "^9.0.1",
-    "ng2-smart-table": "1.6.0",
+    "ng2-smart-table": "1.7.2",
     "ngx-currency": "^2.5.1",
     "ngx-device-detector": "^2.0.6",
     "ngx-easy-table": "^13.0.3",
-    "ngx-mask": "9.1.4",
-    "ngx-mat-select-search": "^3.1.2",
+    "ngx-mask": "10.0.4",
+    "ngx-mat-select-search": "3.2.0",
     "ngx-pagination": "^5.0.0",
     "rxjs": "6.6.2",
     "tslib": "^2.0.0",
@@ -82,7 +82,7 @@
     "@types/jasminewd2": "2.0.6",
     "@types/lodash": "4.14.132",
     "@types/node": "12.11.1",
-    "codelyzer": "5.1.2",
+    "codelyzer": "6.0.1",
     "font-awesome": "^4.7.0",
     "hads": "^2.1.0",
     "htmlhint": "0.11.0",
