--- a/package.json
+++ b/package.json
@@ -43,11 +43,11 @@
     "@angular/router": "10.2.4",
     "@angular/service-worker": "10.2.4",
     "@busacca/ng-pick-datetime": "10.0.0",
-    "@ckeditor/ckeditor5-angular": "1.2.3",
-    "@ckeditor/ckeditor5-build-classic": "21.0.0",
+    "@ckeditor/ckeditor5-angular": "^2.0.1",
+    "@ckeditor/ckeditor5-build-classic": "27.0.0",
     "@fortawesome/angular-fontawesome": "0.7.0",
-    "@fortawesome/fontawesome-svg-core": "1.2.27",
-    "@fortawesome/free-solid-svg-icons": "5.8.2",
+    "@fortawesome/fontawesome-svg-core": "1.2.35",
+    "@fortawesome/free-solid-svg-icons": "5.15.3",
     "@ngx-translate/core": "13.0.0",
     "@ngx-translate/http-loader": "6.0.0",
     "@stomp/ng2-stompjs": "^8.0.0",
@@ -63,10 +63,9 @@
     "ng2-smart-table": "1.7.2",
     "ngx-currency": "^2.5.1",
     "ngx-device-detector": "^2.0.6",
-    "ngx-easy-table": "^13.0.3",
     "ngx-mask": "10.0.4",
     "ngx-mat-select-search": "3.2.0",
-    "ngx-pagination": "^5.0.0",
+    "ngx-pagination": "5.0.0",
     "rxjs": "6.6.2",
     "tslib": "^2.0.0",
     "zone.js": "0.10.3"
@@ -83,7 +82,6 @@
     "@types/lodash": "4.14.132",
     "@types/node": "12.11.1",
     "codelyzer": "6.0.1",
-    "font-awesome": "^4.7.0",
     "hads": "^2.1.0",
     "htmlhint": "0.11.0",
     "https-proxy-agent": "^5.0.0",
