--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     },
     "downlevelIteration": true,
     "importHelpers": true,
-    "module": "es2020",
+    "module": "esnext",
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
