--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@busacca/ng-pick-datetime": "10.0.0",
     "@ckeditor/ckeditor5-angular": "^2.0.1",
     "@ckeditor/ckeditor5-build-classic": "27.0.0",
+    "@ecodev/fab-speed-dial": "6.0.1",
     "@fortawesome/angular-fontawesome": "0.7.0",
     "@fortawesome/fontawesome-svg-core": "1.2.35",
     "@fortawesome/free-solid-svg-icons": "5.15.3",
@@ -60,7 +61,7 @@
     "lodash": "4.17.21",
     "moment": "^2.29.1",
     "ng2-completer": "^9.0.1",
-    "ng2-smart-table": "1.6.0",
+    "ng2-smart-table": "^1.7.2",
     "ngx-currency": "^2.5.1",
     "ngx-device-detector": "^2.0.6",
     "ngx-easy-table": "^13.0.3",
