--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "date-fns": "^2.18.0",
     "eslint": "^7.19.0",
     "firebase": "^8.3.2",
+    "jspdf": "^2.3.1",
     "lodash": "4.17.21",
     "moment": "^2.29.1",
     "ng2-completer": "^9.0.1",
