check eslint, remove lodashjs, and Change Angular build config

--- a/angular.json
+++ b/angular.json
@@ -17,20 +17,17 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "aot": true,
-            "outputPath": "dist/web-app",
+            "outputPath": "dist/",
             "index": "src/index.html",
             "main": "src/main.ts",
             "tsConfig": "src/tsconfig.app.json",
             "polyfills": "src/polyfills.ts",
-            "extractCss": true,
             "assets": [
               "src/favicon.ico",
               "src/robots.txt",
               "src/manifest.json",
               "src/firebase-messaging-sw.js",
-              "src/assets",
-              "src/assets/i18n"
+              "src/assets"
             ],
             "styles": [
               "src/main.scss",
@@ -38,36 +35,6 @@
                 "inject": false,
                 "input": "src/theme/custom/default_theme.scss",
                 "bundleName": "theme/default-theme"
-              },
-              {
-                "inject": false,
-                "input": "src/theme/deeppurple-amber.scss",
-                "bundleName": "theme/deeppurple-amber"
-              },
-              {
-                "inject": false,
-                "input": "src/theme/indigo-pink.scss",
-                "bundleName": "theme/indigo-pink"
-              },
-              {
-                "inject": false,
-                "input": "src/theme/pink-bluegrey.scss",
-                "bundleName": "theme/pink-bluegrey"
-              },
-              {
-                "inject": false,
-                "input": "src/theme/custom/purple-green.scss",
-                "bundleName": "theme/purple-green"
-              },
-              {
-                "inject": false,
-                "input": "src/theme/custom/denim-yellowgreen.scss",
-                "bundleName": "theme/denim-yellowgreen"
-              },
-              {
-                "inject": false,
-                "input": "src/theme/custom/pictonblue-yellowgreen.scss",
-                "bundleName": "theme/pictonblue-yellowgreen"
               }
             ],
             "scripts": []
@@ -84,10 +51,10 @@
               "outputHashing": "all",
               "sourceMap": false,
               "extractCss": true,
-              "namedChunks": false,
+              "namedChunks": true,
               "aot": true,
               "extractLicenses": true,
-              "vendorChunk": false,
+              "vendorChunk": true,
               "buildOptimizer": true,
               "serviceWorker": true,
               "fileReplacements": [
@@ -103,7 +70,9 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
             "browserTarget": "midas-web-app:build",
-            "aot": false
+            "sourceMap": false,
+            "aot": true,
+            "vendorChunk": true
           },
           "configurations": {
             "production": {
