turn on Strict mode Templates and check code style by tslint

--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -7,7 +7,8 @@
   },
   "angularCompilerOptions": {
     "enableIvy": true,
-    "fullTemplateTypeCheck": false,
+    "fullTemplateTypeCheck": true,
+    "strictTemplates":true,
     "preserveWhitespaces": true
   },
   "files": [
