--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
     "noImplicitAny": true,
     "suppressImplicitAnyIndexErrors": true,
     "target": "es5",
+    "strict":true,
     "typeRoots": [
       "node_modules/@types",
       "src/typings.d.ts"
