--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,18 +1,61 @@
 {
   "short_name": "Midas",
-  "name": "Midas Web App",
+  "name": "Midas PWA",
   "start_url": "./",
   "scope": "./",
-  "theme_color": "#fff",
-  "background_color": "#fff",
+  "theme_color": "#1976d2",
+  "background_color": "#000000",
   "display": "standalone",
   "description": "MIDAS Web App is the default web application built on top of the Fineract platform and Angular framework.",
   "gcm_sender_id": "83286799966",
   "icons": [
     {
-      "src": "assets/images/Midas-Logo-01.png",
-      "sizes": "182x184",
-      "type": "image/png"
+      "src": "assets/images/pwa/72.png",
+      "sizes": "72x72",
+      "type": "image/png",
+      "purpose": "maskable any"
+    },
+    {
+      "src": "assets/images/pwa/96.png",
+      "sizes": "96x96",
+      "type": "image/png",
+      "purpose": "maskable any"
+    },
+    {
+      "src": "assets/images/pwa/128.png",
+      "sizes": "128x128",
+      "type": "image/png",
+      "purpose": "maskable any"
+    },
+    {
+      "src": "assets/images/pwa/144.png",
+      "sizes": "144x144",
+      "type": "image/png",
+      "purpose": "maskable any"
+    },
+    {
+      "src": "assets/images/pwa/152.png",
+      "sizes": "152x152",
+      "type": "image/png",
+      "purpose": "maskable any"
+    },
+    {
+      "src": "assets/images/pwa/192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable any"
+    },
+    {
+      "src": "assets/images/pwa/384.png",
+      "sizes": "384x384",
+      "type": "image/png",
+      "purpose": "maskable any"
+    },
+    {
+      "src": "assets/images/pwa/512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable any"
     }
   ]
 }
