master data address with couchdb and pouchdb

--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "date-fns": "^2.18.0",
     "eslint": "^7.19.0",
     "jspdf": "^2.3.1",
+    "localforage": "^1.10.0",
     "lodash": "4.17.21",
     "moment": "^2.29.1",
     "ng2-completer": "^9.0.1",
@@ -68,6 +69,8 @@
     "ngx-pagination": "5.0.0",
     "ngx-tour-core": "^4.2.0",
     "ngx-tour-md-menu": "^4.2.0",
+    "pouchdb": "^7.2.2",
+    "pouchdb-upsert": "^2.2.0",
     "rxjs": "6.6.2",
     "tslib": "^2.2.0",
     "zone.js": "0.10.3"
@@ -83,6 +86,8 @@
     "@types/jasminewd2": "2.0.6",
     "@types/lodash": "4.14.132",
     "@types/node": "12.11.1",
+    "@types/pouchdb": "^6.4.0",
+    "@types/pouchdb-upsert": "^2.2.6",
     "codelyzer": "6.0.1",
     "font-awesome": "^4.7.0",
     "hads": "^2.1.0",
