--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "@fortawesome/free-solid-svg-icons": "5.15.3",
     "@ngx-translate/core": "13.0.0",
     "@ngx-translate/http-loader": "6.0.0",
+    "@sentry/angular": "^6.13.3",
+    "@sentry/tracing": "^6.13.3",
     "angular-calendar": "^0.28.22",
     "chart.js": "3.0.0-alpha",
     "core-js": "2.5.0",
